src/ariel-os-macros/tests/ui/config/misspelled_config_kind.stderr
error: unsupported parameter (`network`, `usb` are supported)
 --> tests/ui/config/misspelled_config_kind.rs:9:19
  |
9 | #[ariel_os::config(networkk)]
  |                   ^^^^^^^^
